src/css/common.css
/* || TYPOGRAPHY */
@font-face {
  font-display: swap;
  font-family: "Space Grotesk";
  font-style: normal;
  font-weight: 500;
  src: url("../assets/fonts/space-grotesk-medium-500.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Space Grotesk";
  font-style: normal;
  font-weight: 700;
  src: url("../assets/fonts/space-grotesk-bold-700.woff2") format("woff2");
}

/* || DEFAULT RESET */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

img {
  display: block;
  height: auto;
  max-width: 100%;
}

input,
textarea,
button {
  font: inherit;
}

/* || VARIABLES */
:root {
  --COLOR-BLACK: #151515;
  --COLOR-DARK-GRAY: #242424;
  --COLOR-GRAY: #d9d9d9;
  --COLOR-GREEN: #4ee1a0;
  --COLOR-WHITE: #fff;
  --COLOR-RED: #ff6f5b;
}

/* || BASIC STYLES */
html {
  scroll-behavior: smooth;
  background: var(--COLOR-BLACK);
  color: var(--COLOR-WHITE);
  font-size: 62.5%; /* 1rem = 10px */
}

body {
  font-family: "Space Grotesk", serif;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 2.6rem;
  display: flex;
  flex-flow: column nowrap;
  min-height: 100vh;
  overflow-x: hidden;
}

main {
  flex-grow: 1;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Space Grotesk", serif;
  font-weight: 700;
}

a:any-link {
  color: var(--COLOR-WHITE);
  text-decoration: none;
}

main {
  position: relative;
}

hr {
  border-bottom: none;
  color: var(--COLOR-WHITE);
}

button:hover {
  cursor: pointer;
}

.text-link {
  border-bottom: 1px solid var(--COLOR-GREEN);
  transition: all 0.3s ease-in-out;
}

.text-link:hover {
  color: var(--COLOR-GREEN);
}

/* || UTILITY CLASSES */
.heading-m {
  font-size: 2.4rem;
  line-height: 3.2rem;
}

.heading-l {
  font-size: 3.2rem;
  line-height: 4rem;
  letter-spacing: -1px;
}

.heading-xl {
  font-size: 4rem;
  line-height: 4rem;
  letter-spacing: -1px;
}

.container {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  max-width: 1536px;
}

.list-none {
  list-style-type: none;
}

.sr-only {
  position: absolute;
  left: -9999px;
}

.required {
  color: var(--COLOR-RED);
}

/* || COMPONENTS */

/* Button */
.btn,
a.btn {
  background-color: transparent;
  padding: 1rem 3.6rem;
  border: 1px solid var(--COLOR-GREEN);
  text-transform: uppercase;
  color: var(--COLOR-GREEN);
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.6rem;
  position: relative;
}

.btn-effect {
  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
  outline: 1px solid;
  outline-color: rgba(255, 255, 255, 0.33);
  outline-offset: 0px;
  text-shadow: none;
  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
}

.btn-effect:hover {
  border: 1px solid;
  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.33),
    0 0 20px rgba(255, 255, 255, 0.33);
  outline-color: rgba(255, 255, 255, 0);
  outline-offset: 15px;
  text-shadow: 1px 1px 2px var(--COLOR-GREEN);
}

/* Link */
.link-effect {
  transition: color 0.2s;
}

.link-effect.active,
.link-effect:hover {
  color: var(--COLOR-GREEN);
}

.link-effect::before,
.link-effect::after {
  display: inline-block;
  opacity: 0;
  transition: transform 0.3s, opacity 0.2s;
  color: var(--COLOR-GREEN);
}

.link-effect::before {
  margin-right: 1rem;
  content: "[";
  transform: translateX(2rem);
}

.link-effect::after {
  margin-left: 1rem;
  content: "]";
  transform: translateX(-2rem);
}

.link-effect.active::before,
.link-effect.active::after,
.link-effect:hover::before,
.link-effect:hover::after,
.link-effect:focus::before,
.link-effect:focus::after {
  opacity: 1;
  transform: translateX(0px);
}

/* Loader */
.loader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1;
}

.loader.active {
  display: flex;
}

.loader__element {
  transform: rotateZ(45deg);
  perspective: 1000px;
  border-radius: 50%;
  width: 12.8rem;
  height: 12.8rem;
  color: var(--COLOR-WHITE);
}

.loader__element:before,
.loader__element:after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: inherit;
  height: inherit;
  border-radius: 50%;
  transform: rotateX(70deg);
  animation: 1s spin linear infinite;
}

.loader__element:after {
  color: var(--COLOR-GREEN);
  transform: rotateY(70deg);
  animation-delay: 0.4s;
}

@keyframes rotate {
  0% {
    transform: translate(-50%, -50%) rotateZ(0deg);
  }
  100% {
    transform: translate(-50%, -50%) rotateZ(360deg);
  }
}

@keyframes rotateccw {
  0% {
    transform: translate(-50%, -50%) rotate(0deg);
  }
  100% {
    transform: translate(-50%, -50%) rotate(-360deg);
  }
}

@keyframes spin {
  0%,
  100% {
    box-shadow: 0.2em 0px 0 0px currentcolor;
  }
  12% {
    box-shadow: 0.2em 0.2em 0 0 currentcolor;
  }
  25% {
    box-shadow: 0 0.2em 0 0px currentcolor;
  }
  37% {
    box-shadow: -0.2em 0.2em 0 0 currentcolor;
  }
  50% {
    box-shadow: -0.2em 0 0 0 currentcolor;
  }
  62% {
    box-shadow: -0.2em -0.2em 0 0 currentcolor;
  }
  75% {
    box-shadow: 0px -0.2em 0 0 currentcolor;
  }
  87% {
    box-shadow: 0.2em -0.2em 0 0 currentcolor;
  }
}

/* || HEADER */
.header__content {
  padding: 3.2rem 0 4rem 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
}

.navigation__list {
  text-transform: uppercase;
}

.hamburger.active .line:nth-child(2) {
  opacity: 0;
}

.hamburger.active .line:nth-child(1) {
  transform: translateY(1rem) rotate(45deg);
}

.hamburger.active .line:nth-child(3) {
  transform: translateY(-1rem) rotate(-45deg);
}

.hamburger .line {
  width: 3.6rem;
  height: 0.2rem;
  background-color: var(--COLOR-WHITE);
  display: block;
  margin: 0.8rem auto;
  transition: all 0.3s ease-in-out;
}

/* || FOOTER */
.footer {
  background: var(--COLOR-DARK-GRAY);
}

.footer__content {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 4rem;
  padding: 5.6rem 0;
}

.footer__links {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 3.2rem;
  text-transform: uppercase;
}

.footer__socials {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.6rem;
}

.footer__social path {
  transition: all 300ms ease-in-out;
}

.footer__social:hover path {
  fill: var(--COLOR-GREEN);
}

/** || MOBILE STYLES */
@media screen and (max-width: 767px) {
  .navigation__list {
    position: absolute;
    top: calc(100% - 1.6rem);
    right: 0;
    visibility: hidden;
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3.2rem;
    padding: 4rem 6.4rem;
    background-color: var(--COLOR-DARK-GRAY);
    transform: translateY(-25%);
    opacity: 0;
    transition: all 0.3s ease-in-out;
  }

  .navigation__list.active {
    opacity: 1;
    transform: translateY(0);
    visibility: visible;
  }
}

/* || TABLET STYLES */
@media screen and (max-width: 1279px) {
  .link-effect.active::before,
  .link-effect.active::after {
    content: none;
  }
}

@media screen and (min-width: 768px) {
  body {
    font-size: 1.8rem;
    line-height: 2.8rem;
  }

  .header__content {
    padding: 6.4rem 0 9.6rem 0;
  }

  .hamburger {
    display: none;
  }

  .navigation__list {
    display: flex;
    gap: 4.2rem;
    align-items: center;
  }

  .footer__content {
    flex-direction: row;
    gap: 4.8rem;
    padding: 2.4rem 0;
  }

  .footer__links {
    flex-direction: row;
    gap: 4.2rem;
  }

  .footer__socials {
    margin-left: auto;
  }
}

/* || DESKTOP STYLES */
@media screen and (min-width: 1280px) {
  .heading-xl {
    font-size: 7.7rem;
    line-height: 7.7rem;
  }

  .heading-l {
    font-size: 4.8rem;
    line-height: 5.6rem;
    letter-spacing: -1.5px;
  }
}

